<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#FFE6E6FA"
		>
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_gravity="center_horizontal"
	    android:layout_width="match_parent"
	   	android:layout_height="360dp"
	    >
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="10dp"
			>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tutorial_highlight_title"
				android:textSize="24sp"
				android:textColor="#FF1E87D2"
				/>
            <!--
    		<ImageView
    			android:layout_gravity="center_horizontal"
				android:layout_width="200dp"
				android:layout_height="200dp"
				android:src="@drawable/tutorial_highlight"
				/>
				-->
    		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tutorial_highlight"
				android:textSize="18sp"
				android:textColor="#FF1E87D2"
				/>
		</LinearLayout>
	</ScrollView>
	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:text="@string/label_next_key"
		android:onClick="openSecondaryMenu"
		/>
</RelativeLayout>