<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@drawable/info_bg_white"
    android:padding="10dp"
    >
    <TextView
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center_horizontal"
    	android:textStyle="bold"
    	android:text="@string/dict_manager_heading"
    	android:textSize="18sp"
    	android:textColor="#FF1E87D2"
    	/>
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/divider_line_thick"
       	/>
    
    <TextView
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/add_word"
    	android:textSize="18sp"
    	android:textColor="#FF1E87D2"
    	/>
    
    <RelativeLayout
    	android:id="@+id/add_word_bar"
    	android:layout_width="match_parent"
    	android:layout_height="45dp"
    	>
    	<EditText
    		android:id="@+id/add_word_box"
       		android:layout_width="200dp"
        	android:layout_height="wrap_content"
        	android:layout_alignParentLeft="true"
        	android:padding="5dp"
        	android:textColor="#FF1E87D2"
        	android:background="@drawable/edit_text_background"
        	/>
    	
    	<ImageView
    		android:id="@+id/add_word_button"
    		android:src="@drawable/add"
    		android:gravity="center"
    		android:layout_gravity="center"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_toLeftOf="@+id/refresh_button"
        	android:layout_marginRight="5dp"
        	android:background="@drawable/green_state_button"
        	android:padding="5dp"
       		/>
    	
    	<ImageView
    		android:id="@id/refresh_button"
    		android:src="@drawable/refresh"
    		android:gravity="center"
    		android:layout_gravity="center"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentRight="true"
        	android:background="@drawable/blue_state_button"
        	android:padding="5dp"
       		/>
    </RelativeLayout>
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/divider_line_thick"
       	/>
    
    <TextView
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/delete_word"
    	android:textSize="18sp"
    	android:textColor="#FF1E87D2"
    	/>
</LinearLayout>