<?xml version="1.0" encoding="UTF-8"?>

<!-- 
<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
 --> 
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:gravity="center"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:padding="10dp"
	    android:background="#FFDFDFDF"
	    >
	    
	    <LinearLayout
			android:gravity="center_horizontal"
	    	android:layout_width="match_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="0.5"
	    	android:layout_marginBottom="5dp"
	    	android:orientation="horizontal"
	    	>
			
			<LinearLayout
				android:id="@+id/settings_dict_download"
	    		android:orientation="vertical"
	    		android:gravity="center"
	    		android:layout_width="0dp"
	    		android:layout_weight="0.33"
	    		android:layout_height="match_parent"
	    		android:background="@drawable/menu_state_button"
	    		android:padding="5dp"
	    		>
	    		<ImageView
	    			android:src="@drawable/iknowu_download_icon"
	    			android:layout_gravity="center_horizontal"
	        		android:layout_width="35dip"
	        		android:layout_height="35dip"
	        		android:layout_marginBottom="10dp"
	       			/>
	    		<TextView
	    			android:text="@string/dict_download_string"
	    			android:gravity="center_horizontal"
	    			android:layout_gravity="center_horizontal"
	       			android:layout_width="wrap_content"
	        		android:layout_height="wrap_content"
	        		android:textColor="#FF1E87D2"
	        		/>
			</LinearLayout>
			
			<LinearLayout
				android:id="@+id/settings_website"
	    		android:orientation="vertical"
	    		android:gravity="center"
	    		android:layout_width="0dp"
	    		android:layout_weight="0.33"
	    		android:layout_height="match_parent"
	    		android:layout_marginRight="5dp"
	    		android:layout_marginLeft="5dp"
	    		android:background="@drawable/menu_state_button"
	    		android:padding="5dp"
	    		>
	    		<ImageView
	    			android:src="@drawable/iknowulogo"
	    			android:layout_gravity="center_horizontal"
	        		android:layout_width="60dip"
	        		android:layout_height="60dip"
	       			/>
			</LinearLayout>
			
			<LinearLayout
				android:id="@+id/settings_dict_manage"
	    		android:orientation="vertical"
	    		android:gravity="center"
	    		android:layout_width="0dp"
	    		android:layout_weight="0.33"
	    		android:layout_height="match_parent"
	    		android:background="@drawable/menu_state_button"
	    		android:padding="5dp"
	    		>
	    		<ImageView
	    			android:src="@drawable/iknowu_dict_manage_icon"
	    			android:layout_gravity="center_horizontal"
	        		android:layout_width="35dip"
	        		android:layout_height="35dip"
	        		android:layout_marginBottom="10dp"
	       			/>
	    		<TextView
	    			android:text="@string/dict_manager_title"
	    			android:gravity="center_horizontal"
	    			android:layout_gravity="center_horizontal"
	       			android:layout_width="wrap_content"
	        		android:layout_height="wrap_content"
	        		android:textColor="#FF1E87D2"
	        		/>
			</LinearLayout>
	    </LinearLayout>
	
		<LinearLayout
			android:gravity="center_horizontal"
	    	android:layout_width="match_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="0.5"
	    	android:orientation="horizontal"
	    	>
			
			<LinearLayout
				android:id="@+id/settings_help"
	    		android:orientation="vertical"
	    		android:gravity="center"
	    		android:layout_width="0dp"
	    		android:layout_weight="0.33"
	    		android:layout_height="match_parent"
	    		android:background="@drawable/menu_state_button"
	    		android:padding="5dp"
	    		>
	    		<ImageView
	    			android:src="@drawable/iknowu_help_icon"
	    			android:layout_gravity="center_horizontal"
	        		android:layout_width="35dip"
	        		android:layout_height="35dip"
	        		android:layout_marginBottom="10dp"
	       			/>
	    		<TextView
	    			android:text="@string/label_help"
	    			android:layout_gravity="center_horizontal"
	       			android:layout_width="wrap_content"
	        		android:layout_height="wrap_content"
	        		android:textColor="#FF1E87D2"
	        		/>
			</LinearLayout>
			
			<LinearLayout
				android:id="@+id/settings_hide"
	    		android:orientation="vertical"
	    		android:gravity="center"
	    		android:layout_width="0dp"
	    		android:layout_weight="0.33"
	    		android:layout_height="match_parent"
	    		android:layout_marginLeft="5dp"
	    		android:layout_marginRight="5dp"
	    		android:background="@drawable/menu_state_button"
	    		android:padding="5dp"
	    		>
	    		<ImageView
	    			android:src="@drawable/iknowu_hide_icon"
	    			android:layout_gravity="center_horizontal"
	        		android:layout_width="35dip"
	        		android:layout_height="35dip"
	        		android:layout_marginBottom="10dp"
	       			/>
	    		<TextView
	    			android:text="@string/hide_keyboard"
	    			android:gravity="center_horizontal"
	    			android:layout_gravity="center_horizontal"
	       			android:layout_width="wrap_content"
	        		android:layout_height="wrap_content"
	        		android:textColor="#FF1E87D2"
	        		/>
			</LinearLayout>
			
			<LinearLayout
				android:id="@+id/settings_settings"
	    		android:orientation="vertical"
	    		android:gravity="center"
	    		android:layout_width="0dp"
	    		android:layout_weight="0.33"
	    		android:layout_height="match_parent"
	    		android:background="@drawable/menu_state_button"
	    		android:padding="5dp"
	    		>
	    		<ImageView
	    			android:src="@drawable/iknowu_settings_icon"
	    			android:layout_gravity="center_horizontal"
	        		android:layout_width="35dip"
	        		android:layout_height="35dip"
	        		android:layout_marginBottom="10dp"
	       			/>
	    		<TextView
	    			android:text="@string/label_settings"
	    			android:layout_gravity="center_horizontal"
	       			android:layout_width="wrap_content"
	        		android:layout_height="wrap_content"
	        		android:textColor="#FF1E87D2"
	        		/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
<!-- 
</ScrollView>
 -->